--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "gulp-tsc": "^1.3.2",
     "gulp-typescript": "^3.2.1",
     "load-gulp-tasks": "^0.1.0",
-    "typescript": "^2.4.2"
+    "typescript": "^2.4.2",
+    "browserify": "^14.4.0",
+    "vinyl-source-buffer": "^1.1.1",
+    "del": "^3.0.0"
   }
 }
