--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "scripts": {
     "build.tasks": "gulp build.tasks",
     "compile": "gulp compile",
+    "bundle": "gulp bundle",
+    "clean": "gulp clean",
     "dev": "gulp dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
